--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/material": "^5.15.19",
     "date-fns": "^3.6.0",
     "firebase": "10.12.2",
+    "firebaseui": "^6.1.0",
     "next": "14.2.3",
+    "next-auth": "5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18"
   },
